# pySPM

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  tests.yaml
doc/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  pySPM.rst  pySPM.utils.rst  tutorial.rst  tutorial_AFM.rst
pySPM/: ITAslicer.py  ITM.py  SPM.py  slicer.py
pyspm/: Bruker.py  ITA.py  PCA.py  ToF.py  __main__.py  _version.py  align.py  nanoscan.py
pyspm/tools/: emission_current_plotter.py  spectra.py  stability.py  tof_timer.py
pyspm/utils/: __init__.py
tests/: test_Bruker.py  test_ITA.py  test_PCA.py  test_elts.py  test_modules.py
