[project]
name = "pyspm"
version = "0.6.3"
description = "Library to handle SPM and ToF-SIMS data"
authors = [
    {name = "Olivier Scholder", email = "o.scholder@gmail.com"},
]
maintainers = [
    {name = "Dinesh Pinto", email = "annual.fallout_0z@icloud.com"},
]
homepage = "https://github.com/scholi/pySPM"
repository = "https://github.com/scholi/pySPM"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://nbviewer.org/github/scholi/pySPM/blob/master/doc/pySPM%20Documentation.ipynb"
keywords = ["ToF", "SIMS", "ION-ToF", "SPM", "SFM", "SXM", "AFM", "KPFM", "PCA", "ITA", "imaging", "ITM", "Bruker", "Nanonis"]
packages = [{ include = "oyspm" }]

requires-python = ">=3.10"

dependencies = [
    "numpy (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.7.2,<4.0.0)",
    "scikit-learn (>=1.2.2,<2.0.0)",
    "scikit-image (>=0.21.0,<1.0.0)",
    "seaborn (>=0.13.0,<1.0.0)",
    "psutil (>=5.9.4,<6.0.0)",
    "tqdm (>=4.65.0,<5.0.0)",
    "ipython (>=8.16.0,<9.0.0)",
]


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.3.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
ruff-lsp = "^0.0.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "E", # pycodestyle-error
    "W", # pycodestyle-warning
    "F", # pyflakes
    "N", # pep8-naming
    "B", # flake8-bugbear
    "I", # isort
    "ASYNC", # flake8-async
    "BLE", # flake8-blind-except
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true
